# robot-on-rust

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: constants.rs  drivebase.rs  joystick.rs  lib.rs  main.rs  robot.rs
src/state/: ds.rs  manager.rs  mod.rs
src/subsystems/: drivebase.rs  mod.rs
src/wpilibfill/: mod.rs  notifier.rs  observe.rs  robot.rs
