[package]
name = "arfur-robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arfur = { git = "https://github.com/arfur-rs/arfur" }
async-trait = "0.1.67"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread", "sync"] }
